--- a/Report7/A7.md
+++ b/Report7/A7.md
@@ -38,19 +38,56 @@
 ### 3.1 Module 1: Authentication
  > These are the endpoints available in the Authentication Module.
  
-  * R101: Login Form [/login]
-  * R102: Login Action [/login]
-  * R103: Logout Action [/home]
-  * R104: Register Form [/register]
-  * R105: Register Action [/register]
+  * R101: Login Form [`/login`]
+  * R102: Login Action [`/login`]
+  * R103: Logout Action [`/home`]
+  * R104: Register Form [`/register`]
+  * R105: Register Action [`/register`]
 
 #### R101: Login Form
 
-| __dsdsd__ | dsds |
+|  |   |
 | ------- | ------------- |
-| __M01: Authentication__ | Web resources associated with user authentication login/logout and registration.|
-| __M02: Individual Profile__ | Web resources associated with individual user items, includes the following system features: edit profile, change password, view and accept project invites, and, if you’re the project coordinator you can also accept or deny join requests.|
+| __URL__ | `/login` |
+| __Description__ | Page with a form to login to a user account.|
+| __Method__ | GET|
+| __UI__ | UI05|
+| __SUBMIT__ | R102|
+| __Permissions__ | PUB|
 
+#### R102: Login Action
+
+|  |   |   |
+| ---- | ---- | ---- |
+| __URL__ | `/login` |
+| __Description__ | This web resource logs the user into the system. Redirects to the user projects page on success and the login form on failure.|
+| __Method__ | POST|
+| __Request Body__ | +email: string | E-mail |
+|  | +password: string | Password |
+| __Redirects__ | R305  | Success |
+|  | R101  | Error |
+| __Permissions__ | PUB|
+
+#### R103: Logout Action
+
+|  |   |  |
+| ------- | ------------- | ------------- |
+| __URL__ | `/logout` |
+| __Description__ | This web resource logs out the authenticated user.|
+| __Method__ | POST|
+| __Redirects__ | R101 HOME  | Success |
+| __Permissions__ | USR |
+
+#### R104: Register Form
+
+|  |   |
+| ------- | ------------- |
+| __URL__ | `/register` |
+| __Description__ | Page with a form to register a new user account.| PAREEEEI AQUIII
+| __Method__ | GET|
+| __UI__ | UI05|
+| __SUBMIT__ | R102|
+| __Permissions__ | PUB|
 
 
 
