--- a/Report7/A7.md
+++ b/Report7/A7.md
@@ -83,10 +83,10 @@
 |  |   |
 | ------- | ------------- |
 | __URL__ | `/register` |
-| __Description__ | Page with a form to register a new user account.| PAREEEEI AQUIII
+| __Description__ | Page with a form to register a new user account.| 
 | __Method__ | GET|
-| __UI__ | UI05|
-| __SUBMIT__ | R102|
+| __UI__ | UI06|
+| __SUBMIT__ | R105| PAREIII AQUI
 | __Permissions__ | PUB|
 
 
