--- a/Report7/A7.md
+++ b/Report7/A7.md
@@ -51,8 +51,8 @@
 | __URL__ | `/login` |
 | __Description__ | Page with a form to login to a user account.|
 | __Method__ | GET|
-| __UI__ | UI05|
-| __SUBMIT__ | R102|
+| __UI__ | [UI05](https://www.google.com)|
+| __SUBMIT__ | [R102](https://www.google.com)|
 | __Permissions__ | PUB|
 
 #### R102: Login Action
@@ -64,8 +64,8 @@
 | __Method__ | POST|
 | __Request Body__ | +email: string | E-mail |
 |  | +password: string | Password |
-| __Redirects__ | R305  | Success |
-|  | R101  | Error |
+| __Redirects__ | [R305](https://www.google.com)  | Success |
+|  | [R101](https://www.google.com)  | Error |
 | __Permissions__ | PUB|
 
 #### R103: Logout Action
@@ -75,7 +75,7 @@
 | __URL__ | `/logout` |
 | __Description__ | This web resource logs out the authenticated user.|
 | __Method__ | POST|
-| __Redirects__ | R101 HOME  | Success |
+| __Redirects__ | [R101](https://www.google.com) HOME  | Success |
 | __Permissions__ | USR |
 
 #### R104: Register Form
@@ -85,10 +85,27 @@
 | __URL__ | `/register` |
 | __Description__ | Page with a form to register a new user account.| 
 | __Method__ | GET|
-| __UI__ | UI06|
-| __SUBMIT__ | R105| PAREIII AQUI
+| __UI__ | [UI06](https://www.google.com)|
+| __SUBMIT__ |  [R105](https://www.google.com)|
 | __Permissions__ | PUB|
 
+#### R105: Register Action
+
+|  |   |   |
+| ---- | ---- | ---- |
+| __URL__ | `/register` |
+| __Description__ | This web resource inserts the user into the system. Redirects to the user projects page on success and the register form on failure.|
+| __Method__ | POST|
+| __Request Body__ | +name: string | Name |
+|  | +lastName: string | Last Name |
+|  | +gender: char  | Gender |
+|  | +country: string  | Country |
+|  | +email: string  | E-mail |
+|  | +username: string   | Username |
+|  | +password: string   | Password |
+| __Redirects__ | [R401](https://www.google.com)  | Success |
+|  | [R104](https://www.google.com)  | Error |
+| __Permissions__ | PUB|
 
 
 
