--- a/Report7/A7.md
+++ b/Report7/A7.md
@@ -107,10 +107,133 @@
 |  | [R104](https://www.google.com)  | Error |
 | __Permissions__ | PUB|
 
-
-
-### 3.2 Module 2
+### 3.2 Module 2: Individual Profile
+ > These are the endpoints available in the Individual Profile Module.
  
+  * R201: Edit Profile Form [`/profile/{id}/pr`]
+  * R202: Edit Profile Action [`//profile/{id}/pr`]
+  * R203: Password recovery Form [`/profile/{id}/pw`]
+  * R204: Password recovery Action [`/profile/{id}/pw`]
+  * R205: View project invites [`/profile/{id}/inv`]
+  * R206: Accept project invites [`/profile/{id}/inv`]
+  * R207: View join requests [`/profile/{id}/join`]
+  * R208: Accept or deny join requests [`/profile/{id}/join`]
+
+#### R201: Edit Profile Form
+
+|  |   |   |
+| ------- | ------------- | ------------- |
+| __URL__ | `/profile/{id}/edit` |
+| __Description__ | Page with a form to edit profile info.|
+| __Method__ | GET|
+| __Parameters__ | +id: integer | user primary key |
+| __UI__ | [UI07](https://www.google.com)|
+| __SUBMIT__ | [R305](https://www.google.com)|
+| __Permissions__ | OWN|
+
+#### R202: Edit Profile Action
+
+|  |   |   |
+| ---- | ---- | ---- |
+| __URL__ | `/profile/{id}/edit` |
+| __Description__ | Web resource that changes user profile info based on the input received. Redirects to the user projects page on success and edit profile page on failure.|
+| __Method__ | POST|
+| __Parameters__ | +id: integer | user primary key |
+| __Request Body__ | ?fisrtName: string  | New first name |
+|  | ?lasName: string | New last name |
+| __Redirects__ | [R305](https://www.google.com)  | Success |
+|  | [R201](https://www.google.com)  | Error |
+| __Permissions__ | OWN |
+
+#### R203: Password recovery Form
+
+|  |   | 
+| ------- | ------------- |
+| __URL__ | `/profile/{id}/password` |
+| __Description__ | Page with a form to request a token to reset the password.|
+| __Method__ | GET|
+| __UI__ | [UI07](https://www.google.com)|
+| __SUBMIT__ | [R204](https://www.google.com)|
+| __Permissions__ | OWN|
+
+#### R204: Password recovery Action
+
+|  |   |   |
+| ---- | ---- | ---- |
+| __URL__ | `/profile/{id}/password` |
+| __Description__ | Web resource that sends a reset password link to the specified email.|
+| __Method__ | POST|
+| __Request Body__ | +email: string  | User email |
+| __Redirects__ | [UI01](https://www.google.com)  | Success |
+|  | [R203](https://www.google.com)  | Error |
+| __Permissions__ | OWN |
+
+#### R205: View Project Invites
+
+|  |   |   |
+| ---- | ---- | ---- |
+| __URL__ | `/profile/{id}/invites` |
+| __Description__ | Shows the user’s projects invites.|
+| __Method__ | GET |
+| __Parameters__ | +id: integer | user primary key |
+| __Redirects__ | [UI07](https://www.google.com)
+| __Permissions__ | OWN |
+
+#### R206: Accept Projects Invites
+
+|  |   |   |
+| ---- | ---- | ---- |
+| __URL__ | `/profile/{id}/invites` |
+| __Description__ | Web resource that allow a user to join a project.|
+| __Method__ | POST|
+| __Request Body__ | +id_user: integer  | user primary key |
+|  | +id_project: integer | project primary key |
+| __Redirects__ | [UI07](https://www.google.com)  | Success |
+| __Permissions__ | OWN |
+
+#### R207: View Join Requests
+
+|  |   |   |
+| ---- | ---- | ---- |
+| __URL__ | `/profile/{id}/join` |
+| __Description__ | Shows the user’s join requests. |
+| __Method__ | GET |
+| __Parameters__ | +id: integer | user primary key |
+| __Redirects__ | [UI07](https://www.google.com)
+| __Permissions__ | OWN |
+
+#### R208: Accept or Deny Join Requests
+
+|  |   |   |
+| ---- | ---- | ---- |
+| __URL__ | `/profile/{id}/join` |
+| __Description__ | Web resource that allow a user to accept or deny a join request.|
+| __Method__ | POST|
+| __Request Body__ | +id_userconv: integer  | user primary key (user who requested entrance on a project) |
+|  | +id_project: integer | project primary key |
+| __Parameters__ | +id: integer | user primary key |
+| __Redirects__ | [UI07](https://www.google.com)  | Success |
+| __Permissions__ | OWN |
+
+### 3.3 Module 3: Projects
+ > These are the endpoints available in the Projects Module.
+ 
+  * R301: View Projects [`/projects`]
+  * R302: Add New Project Form [`/projects/add`]
+  * R303: Add New Project Action [`/projects/add`]
+  * R304: Project View Page [`/thisproject/{id}`]
+  * R305: Search Project [`/projects`]
+  * R306: View My Projects [`/myprojects/{id}`]
+  * R307: View Projects Members [`/thisproject/{id}/memb`]
+  
+### 3.4 Module 4: Task List
+ > These are the endpoints available in the Task List Module.
+ 
+  * R401: View Projects [`/thisproject/{id}/tasks`]
+  * R402: Add New Project Form [`/thisproject/{id}/tasks/add`]
+  * R403: Add New Project Action [`/thisproject/{id}/tasks/edit`]
+  * R404: Project View Page [`/thisproject/{id}/tasks/del`]
+
 ## 4. JSON/XML Types
  
 > Document the JSON or XML responses that will be used by the web resources.
