--- a/Report7/A7.md
+++ b/Report7/A7.md
@@ -234,6 +234,24 @@
   * R403: Add New Project Action [`/thisproject/{id}/tasks/edit`]
   * R404: Project View Page [`/thisproject/{id}/tasks/del`]
 
+### 3.5 Module 5: Forum
+ > These are the endpoints available in the Forum Module.
+ 
+  * R501: View Forum Page [`/thisproject/{id}/forum]`]
+  * R502: View New Forum Post [`/thisproject/{id}/forum/add`]
+  * R503: Add New Forum Post [`/thisproject/{id}/forum/add`]
+  * R504: View Forum Post messages [`/thisproject/{id}/forum/forumpost`]
+  * R505: Add Forum Post message [`/thisproject/{id}/forum/forumpost/add`]
+  * R506: Delete Forum Post message [`/thisproject/{id}/forum/forumpost/del`]
+
+### 3.6 Module 6: Static pages
+ > These are the endpoints available in the Task List Module.
+ 
+  * R601: Home [`/index`]
+  * R602: About [` /about`]
+  * R603: Contact [`/contact`]
+  * R604: FAQ [`/faq`]
+
 ## 4. JSON/XML Types
  
 > Document the JSON or XML responses that will be used by the web resources.
