--- a/Report7/A7.md
+++ b/Report7/A7.md
@@ -255,6 +255,30 @@
 ## 4. JSON/XML Types
  
 > Document the JSON or XML responses that will be used by the web resources.
+
+### 4.1 JSON303: Projects: {projects}[]
+ 
+```sql
+{
+  "project": [
+    {
+      "id": "1",
+      "title": "Creating a website",
+      "description": "How to create a website ...",
+      "teamSize": "100",
+      "privacy": "Public",
+    },
+    {
+      "id": "1",
+      "title": "Reset your smartphone",
+      "description": "How to reset your smartphone ...",
+      "teamSize": "50",
+      "privacy": "Private",
+    }
+  ]
+}
+```
+ 
  
  
 ## Revision history
