--- a/Report7/A7.md
+++ b/Report7/A7.md
@@ -258,7 +258,7 @@
 
 ### 4.1 JSON303: Projects: {projects}[]
  
-```php
+```java
 {
   "project": [
     {
@@ -278,9 +278,33 @@
   ]
 }
 ```
- 
- 
- 
+### 4.1 JSON401: Projects: {tasks}[] 
+```java 
+ {
+  "task": [
+    {
+      "id": "1",
+      "idProject": "1",
+      "idTaskOwner": "1",
+      "taskName": "Introduction Text",
+      "taskDescription": "Introduction text of the book",
+      "priority": "high",
+      "dateCreated": "2017-06-04",
+      "status": "pending",
+    },
+    {
+      "id": "1",
+      "project": "2",
+      "taskOwner": "3",
+      "taskName": "Database Code",
+      "taskDescription": "Code of the website database",
+      "priority": "low",
+      "dateCreated": "2018-01-02",
+      "status": "progress",    }
+  ]
+}
+```
+
 ## Revision history
  
 Changes made to the first submission:
