--- a/Report7/A7.md
+++ b/Report7/A7.md
@@ -226,6 +226,48 @@
   * R306: View My Projects [`/myprojects/{id}`]
   * R307: View Projects Members [`/thisproject/{id}/memb`]
   
+ #### R301: View Projects
+
+|  |   |  |
+| ------- | ------------- | ------------- |
+| __URL__ | `/projects` |
+| __Description__ | Shows the projects's page.|
+| __Method__ | GET|
+| __Parameters__ | +id: integer | project primary key |
+| __UI__ | [UI08](https://www.google.com)|
+| __Permissions__ | USR |
+   
+#### R302: Add New Project Form
+
+|  |   |  |
+| ------- | ------------- | ------------- |
+| __URL__ | `/projects/add` |
+| __Description__ | Page with a form to create a new project.|
+| __Method__ | GET|
+| __UI__ | [UI09](https://www.google.com)|
+| __SUBMIT__ | [R303](https://www.google.com)|
+| __Permissions__ | USR |
+  
+#### R303: Add New Project Action
+
+|  |   |   |
+| ---- | ---- | ---- |
+| __URL__ | `/profile/add` |
+| __Description__ | Web resource that creates a new project based on the input received. Redirects to the project page on success and back to projects page on failure.|
+| __Method__ | POST|
+| __Request Body__ | +title: string   | Title of the Project |
+|  | +description: text | Description of the Project |
+|  | +privacy: bool  | Privacy type of the project |
+|  | +maxMembers: integer | Max number of members in the project |
+| __Redirects__ | [R203](https://www.google.com)  | Success |
+|  | [R204](https://www.google.com) | Error |
+| __Response body__ | JSON303 |  
+| __Permissions__ | USR, OWN |  
+  
+  
+  
+  
+  
 ### 3.4 Module 4: Task List
  > These are the endpoints available in the Task List Module.
  
@@ -251,6 +293,46 @@
   * R602: About [` /about`]
   * R603: Contact [`/contact`]
   * R604: FAQ [`/faq`]
+  
+#### R601: Home
+
+|  |   |  
+| ---- | ---- |
+| __URL__ | `/index` |
+| __Description__ | Get index page.|
+| __Method__ | GET |
+| __UI__ | [UI01](https://www.google.com)
+| __Permissions__ | PUB |
+
+#### R602: About
+
+|  |   |  
+| ---- | ---- | 
+| __URL__ | `/about` |
+| __Description__ | Get about page.|
+| __Method__ | GET |
+| __UI__ | [UI02](https://www.google.com)
+| __Permissions__ | PUB |
+
+#### R603: Contact
+
+|  |   |  
+| ---- | ---- | 
+| __URL__ | `/contact` |
+| __Description__ | Get contact page.|
+| __Method__ | GET |
+| __UI__ | [UI04](https://www.google.com)
+| __Permissions__ | PUB |
+
+#### R604: FAQ
+
+|  |   | 
+| ---- | ---- |
+| __URL__ | `/faq` |
+| __Description__ | Get faq page.|
+| __Method__ | GET |
+| __UI__ | [UI03](https://www.google.com)
+| __Permissions__ | PUB |
 
 ## 4. JSON/XML Types
  
