--- a/Report7/A7.md
+++ b/Report7/A7.md
@@ -239,8 +239,8 @@
    
 #### R302: Add New Project Form
 
-|  |   |  |
-| ------- | ------------- | ------------- |
+|  |   |
+| ------- | ------------- | 
 | __URL__ | `/projects/add` |
 | __Description__ | Page with a form to create a new project.|
 | __Method__ | GET|
@@ -250,7 +250,7 @@
   
 #### R303: Add New Project Action
 
-|  |   |   |
+|  |   |  |
 | ---- | ---- | ---- |
 | __URL__ | `/profile/add` |
 | __Description__ | Web resource that creates a new project based on the input received. Redirects to the project page on success and back to projects page on failure.|
@@ -264,8 +264,46 @@
 | __Response body__ | JSON303 |  
 | __Permissions__ | USR, OWN |  
   
+ #### R304: Project View Page
+
+|  |   |  |
+| ------- | ------------- | ------------- |
+| __URL__ | `/thisproject/{id}` |
+| __Description__ | Shows the projects's page.|
+| __Method__ | GET|
+| __Parameters__ | +id: integer | project primary key |
+| __UI__ | [UI10](https://www.google.com)|
+| __Permissions__ | USR |  
   
+#### R305: Search Project
+
+|  |   |  |
+| ------- | ------------- | ------------- |
+| __URL__ | `/projects` |
+| __Description__ | Page with a form to search projects.|
+| __Method__ | GET|
+| __Parameters__ | ?query: string | String field to search for in projects |
+| __Permissions__ | USR |  
+
+#### R306: View My Projects
+
+|  |   |  |
+| ------- | ------------- | ------------- |
+| __URL__ | `/myprojects/{id}` |
+| __Description__ | Get all my projects.|
+| __Method__ | GET|
+| __Parameters__ | +id: integer | user primary key |
+| __Permissions__ | OWN |  
   
+ #### R307: View  Projects Contributors
+
+|  |   |  |
+| ------- | ------------- | ------------- |
+| __URL__ | `/thisproject/{id}/members` |
+| __Description__ | View all project members.|
+| __Method__ | GET|
+| __Parameters__ | +id: integer | Project primary key. |
+| __Permissions__ | USR |   
   
   
 ### 3.4 Module 4: Task List
