--- a/Report7/A7.md
+++ b/Report7/A7.md
@@ -314,6 +314,58 @@
   * R403: Add New Project Action [`/thisproject/{id}/tasks/edit`]
   * R404: Project View Page [`/thisproject/{id}/tasks/del`]
 
+ #### R401: View Task List
+
+|  |   |  |
+| ------- | ------------- | ------------- |
+| __URL__ | `/thisproject/{id}/tasks` |
+| __Description__ | Get all tasks of a project.|
+| __Method__ | GET|
+| __Parameters__ | +id: integer | Project primary key |
+| __UI__ | [UI11](https://www.google.com)|
+| __Response body__ | JSON401 | 
+| __Permissions__ | USR |
+
+#### R402: Add Tasks
+
+|  |   |  |
+| ---- | ---- | ---- |
+| __URL__ | `/thisproject/{id}/tasks/add` |
+| __Description__ | This web resource adds a new task. Redirect to project task page on success, and to create task form on failure.|
+| __Method__ | POST|
+| __Parameters__ | +id: integer | Project primary key |
+| __Request Body__ | +title: string   | Task title |
+|  | +description: string | Task description text. |
+|  | +privacy: bool  | Privacy type of the task |
+| __Redirects__ | [R401](https://www.google.com)  | Success |
+|  | [R402](https://www.google.com) | Error |
+| __Permissions__ | USR |
+
+#### R403: Edit Tasks
+
+|  |   |  |
+| ---- | ---- | ---- |
+| __URL__ | `/thisproject/{id}/tasks/edit` |
+| __Description__ | This web resource edits a task. |
+| __Method__ | POST|
+| __Parameters__ | +id: integer | Task primary key |
+| __Request Body__ | +description: string   | Task description |
+|  | +privacy: bool  | Privacy type of the task |
+| __Redirects__ | [R401](https://www.google.com)  | Success |
+|  | [R403](https://www.google.com) | Error |
+| __Permissions__ | OWN |
+
+#### R404: Delete Tasks
+
+|  |   |  |
+| ---- | ---- | ---- |
+| __URL__ | `/thisproject/{id}/tasks/del` |
+| __Description__ | This web resource deletes a task. |
+| __Method__ | DELETE |
+| __Parameters__ | +id: integer | Task primary key |
+| __Redirects__ | [R401](https://www.google.com)  | Success |
+| __Permissions__ | OWN |
+
 ### 3.5 Module 5: Forum
  > These are the endpoints available in the Forum Module.
  
@@ -323,6 +375,39 @@
   * R504: View Forum Post messages [`/thisproject/{id}/forum/forumpost`]
   * R505: Add Forum Post message [`/thisproject/{id}/forum/forumpost/add`]
   * R506: Delete Forum Post message [`/thisproject/{id}/forum/forumpost/del`]
+
+ #### R501: View Forum Page
+
+|  |   |  |
+| ------- | ------------- | ------------- |
+| __URL__ | `/thisproject/{id}/forum` |
+| __Description__ | Show the forum page of a project.|
+| __Method__ | GET|
+| __Parameters__ | +id: integer | Project primary key |
+| __UI__ | [UI13](https://www.google.com)|
+| __Permissions__ | USR |
+
+ #### R502: View New Forum Post
+
+|  |   |  |
+| ------- | ------------- | ------------- |
+| __URL__ | `/thisproject/{id}/forum/add` |
+| __Description__ | Show the forms to create a new post on the Forum Page.|
+| __Method__ | GET|
+| __Parameters__ | +id: integer | Project primary key |
+| __UI__ | [UI14](https://www.google.com)|
+| __Permissions__ | USR |
+
+
+
+
+
+
+
+
+
+
+
 
 ### 3.6 Module 6: Static pages
  > These are the endpoints available in the Task List Module.
