--- a/Report7/A7.md
+++ b/Report7/A7.md
@@ -398,10 +398,47 @@
 | __UI__ | [UI14](https://www.google.com)|
 | __Permissions__ | USR |
 
+#### R503: Add New Forum Post
 
+|  |   |  |
+| ---- | ---- | ---- |
+| __URL__ | `/thisproject/{id}/forum/add` |
+| __Description__ | This web resource adds a new forum post to the Forum Page. |
+| __Method__ | POST|
+| __Parameters__ | +id: integer | Project primary key |
+| __Request Body__ | +title: string  | Title of the Forum Post |
+|  | +post:text | First message of Forum Post |
+| __Returns__ | 200 OK  | The forum post was successfully added. |
+|  | 400 Bad Request | Error. Error message is specified via a HTTP header. |
+| __Permissions__ | USR |
 
+#### R504: View Forum Post messages
 
+|  |   |  |
+| ------- | ------------- | ------------- |
+| __URL__ | `/thisproject/{id_project}/forum/forumpost{id_post}` |
+| __Description__ | Show forum post messages.|
+| __Method__ | GET|
+| __Parameters__ | +id_project: integer | project id |
+| | +id_project: integer | Forum post id |
+| __UI__ | [UI15](https://www.google.com)|
+| __Permissions__ | USR |
 
+#### R505: Add Forum Post message
+
+|  |   |  |
+| ---- | ---- | ---- |
+| __URL__ | `/thisproject/{id_project}/forum/forumpost{id_post}/add` |
+| __Description__ | This web resource adds a new message in a forum post. |
+| __Method__ | POST|
+| __Parameters__ | +id_project: integer | project id |
+| | +id_post:integer | Forum post id |
+| | id_forum: integer | Forum id |
+| __Request Body__ | +comment: text   | Message of user. |
+| __Returns__ | 200 OK  | The message was successfully added. |
+|  | 400 Bad Request | Error. Error message is specified via a HTTP header. |
+| __UI__ | [UI16](https://www.google.com)|
+| __Permissions__ | USR |
 
 
 
