--- a/Report7/A7.md
+++ b/Report7/A7.md
@@ -440,10 +440,19 @@
 | __UI__ | [UI16](https://www.google.com)|
 | __Permissions__ | USR |
 
+#### 506: Delete Forum Post message
 
-
-
-
+|  |   |  |
+| ---- | ---- | ---- |
+| __URL__ | `/thisproject/{id_project}/forum/forumpost{id_post}/del` |
+| __Description__ | This web resource deletes a message of the Forum Post. |
+| __Method__ | DELETE |
+| __Parameters__ | +id_project: integer| project id |
+| | +id_post:integer | Forum post id |
+| | id_forum: integer | Forum id |
+| __Returns__ | 200 OK  | The message was successfully added. |
+|  | 400 Bad Request | Error. Error message is specified via a HTTP header. |
+| __Permissions__ | OWN |
 
 
 ### 3.6 Module 6: Static pages
