--- a/Report7/A7.md
+++ b/Report7/A7.md
@@ -51,7 +51,7 @@
 | __URL__ | `/login` |
 | __Description__ | Page with a form to login to a user account.|
 | __Method__ | GET|
-| __UI__ | [UI05](https://www.google.com)|
+| __UI__ | [UI05](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/lbaw17GG_a3.md#ui05-sign-in)|
 | __SUBMIT__ | [R102](https://www.google.com)|
 | __Permissions__ | PUB|
 
@@ -85,7 +85,7 @@
 | __URL__ | `/register` |
 | __Description__ | Page with a form to register a new user account.| 
 | __Method__ | GET|
-| __UI__ | [UI06](https://www.google.com)|
+| __UI__ | [UI06](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/lbaw17GG_a3.md#ui06-sign-up)|
 | __SUBMIT__ |  [R105](https://www.google.com)|
 | __Permissions__ | PUB|
 
@@ -127,7 +127,7 @@
 | __Description__ | Page with a form to edit profile info.|
 | __Method__ | GET|
 | __Parameters__ | +id: integer | user primary key |
-| __UI__ | [UI07](https://www.google.com)|
+| __UI__ | [UI07](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/lbaw17GG_a3.md#ui07-user-profile)|
 | __SUBMIT__ | [R305](https://www.google.com)|
 | __Permissions__ | OWN|
 
@@ -152,7 +152,7 @@
 | __URL__ | `/profile/{id}/password` |
 | __Description__ | Page with a form to request a token to reset the password.|
 | __Method__ | GET|
-| __UI__ | [UI07](https://www.google.com)|
+| __UI__ | [UI07](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/lbaw17GG_a3.md#ui07-user-profile)|
 | __SUBMIT__ | [R204](https://www.google.com)|
 | __Permissions__ | OWN|
 
@@ -164,7 +164,7 @@
 | __Description__ | Web resource that sends a reset password link to the specified email.|
 | __Method__ | POST|
 | __Request Body__ | +email: string  | User email |
-| __Redirects__ | [UI01](https://www.google.com)  | Success |
+| __Redirects__ | [UI01](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/lbaw17GG_a3.md#ui01-home)  | Success |
 |  | [R203](https://www.google.com)  | Error |
 | __Permissions__ | OWN |
 
@@ -176,7 +176,7 @@
 | __Description__ | Shows the user’s projects invites.|
 | __Method__ | GET |
 | __Parameters__ | +id: integer | user primary key |
-| __Redirects__ | [UI07](https://www.google.com)
+| __Redirects__ | [UI07](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/lbaw17GG_a3.md#ui07-user-profile)
 | __Permissions__ | OWN |
 
 #### R206: Accept Projects Invites
@@ -188,7 +188,7 @@
 | __Method__ | POST|
 | __Request Body__ | +id_user: integer  | user primary key |
 |  | +id_project: integer | project primary key |
-| __Redirects__ | [UI07](https://www.google.com)  | Success |
+| __Redirects__ | [UI07](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/lbaw17GG_a3.md#ui07-user-profile)  | Success |
 | __Permissions__ | OWN |
 
 #### R207: View Join Requests
