--- a/Report7/A7.md
+++ b/Report7/A7.md
@@ -52,7 +52,7 @@
 | __Description__ | Page with a form to login to a user account.|
 | __Method__ | GET|
 | __UI__ | [UI05](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/lbaw17GG_a3.md#ui05-sign-in)|
-| __SUBMIT__ | [R102](https://www.google.com)|
+| __SUBMIT__ | [R102](https://github.com/JCLemos92/lbaw1767/blob/master/Report7/A7.md#r102-login-action)|
 | __Permissions__ | PUB|
 
 #### R102: Login Action
@@ -64,8 +64,8 @@
 | __Method__ | POST|
 | __Request Body__ | +email: string | E-mail |
 |  | +password: string | Password |
-| __Redirects__ | [R305](https://www.google.com)  | Success |
-|  | [R101](https://www.google.com)  | Error |
+| __Redirects__ | [R305](https://github.com/JCLemos92/lbaw1767/blob/master/Report7/A7.md#r305-search-project)  | Success |
+|  | [R101](https://github.com/JCLemos92/lbaw1767/blob/master/Report7/A7.md#r101-login-form)  | Error |
 | __Permissions__ | PUB|
 
 #### R103: Logout Action
@@ -75,7 +75,7 @@
 | __URL__ | `/logout` |
 | __Description__ | This web resource logs out the authenticated user.|
 | __Method__ | POST|
-| __Redirects__ | [R101](https://www.google.com) HOME  | Success |
+| __Redirects__ | [R101](https://github.com/JCLemos92/lbaw1767/blob/master/Report7/A7.md#r101-login-form) HOME  | Success |
 | __Permissions__ | USR |
 
 #### R104: Register Form
@@ -86,7 +86,7 @@
 | __Description__ | Page with a form to register a new user account.| 
 | __Method__ | GET|
 | __UI__ | [UI06](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/lbaw17GG_a3.md#ui06-sign-up)|
-| __SUBMIT__ |  [R105](https://www.google.com)|
+| __SUBMIT__ |  [R105](https://github.com/JCLemos92/lbaw1767/blob/master/Report7/A7.md#r105-register-action)|
 | __Permissions__ | PUB|
 
 #### R105: Register Action
@@ -103,8 +103,8 @@
 |  | +email: string  | E-mail |
 |  | +username: string   | Username |
 |  | +password: string   | Password |
-| __Redirects__ | [R401](https://www.google.com)  | Success |
-|  | [R104](https://www.google.com)  | Error |
+| __Redirects__ | [R401](https://github.com/JCLemos92/lbaw1767/blob/master/Report7/A7.md#r401-view-task-list)  | Success |
+|  | [R104](https://github.com/JCLemos92/lbaw1767/blob/master/Report7/A7.md#r104-register-form)  | Error |
 | __Permissions__ | PUB|
 
 ### 3.2 Module 2: Individual Profile
@@ -128,7 +128,7 @@
 | __Method__ | GET|
 | __Parameters__ | +id: integer | user primary key |
 | __UI__ | [UI07](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/lbaw17GG_a3.md#ui07-user-profile)|
-| __SUBMIT__ | [R305](https://www.google.com)|
+| __SUBMIT__ | [R305](https://github.com/JCLemos92/lbaw1767/blob/master/Report7/A7.md#r305-search-project)|
 | __Permissions__ | OWN|
 
 #### R202: Edit Profile Action
@@ -141,8 +141,8 @@
 | __Parameters__ | +id: integer | user primary key |
 | __Request Body__ | ?fisrtName: string  | New first name |
 |  | ?lasName: string | New last name |
-| __Redirects__ | [R305](https://www.google.com)  | Success |
-|  | [R201](https://www.google.com)  | Error |
+| __Redirects__ | [R305](https://github.com/JCLemos92/lbaw1767/blob/master/Report7/A7.md#r305-search-project)  | Success |
+|  | [R201](https://github.com/JCLemos92/lbaw1767/blob/master/Report7/A7.md#r201-edit-profile-form)  | Error |
 | __Permissions__ | OWN |
 
 #### R203: Password recovery Form
@@ -153,7 +153,7 @@
 | __Description__ | Page with a form to request a token to reset the password.|
 | __Method__ | GET|
 | __UI__ | [UI07](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/lbaw17GG_a3.md#ui07-user-profile)|
-| __SUBMIT__ | [R204](https://www.google.com)|
+| __SUBMIT__ | [R204](https://github.com/JCLemos92/lbaw1767/blob/master/Report7/A7.md#r204-password-recovery-action)|
 | __Permissions__ | OWN|
 
 #### R204: Password recovery Action
@@ -165,7 +165,7 @@
 | __Method__ | POST|
 | __Request Body__ | +email: string  | User email |
 | __Redirects__ | [UI01](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/lbaw17GG_a3.md#ui01-home)  | Success |
-|  | [R203](https://www.google.com)  | Error |
+|  | [R203](https://github.com/JCLemos92/lbaw1767/blob/master/Report7/A7.md#r203-password-recovery-form)  | Error |
 | __Permissions__ | OWN |
 
 #### R205: View Project Invites
@@ -199,7 +199,7 @@
 | __Description__ | Shows the user’s join requests. |
 | __Method__ | GET |
 | __Parameters__ | +id: integer | user primary key |
-| __Redirects__ | [UI07](https://www.google.com)
+| __Redirects__ | [UI07](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/lbaw17GG_a3.md#ui07-user-profile)
 | __Permissions__ | OWN |
 
 #### R208: Accept or Deny Join Requests
@@ -212,7 +212,7 @@
 | __Request Body__ | +id_userconv: integer  | user primary key (user who requested entrance on a project) |
 |  | +id_project: integer | project primary key |
 | __Parameters__ | +id: integer | user primary key |
-| __Redirects__ | [UI07](https://www.google.com)  | Success |
+| __Redirects__ | [UI07](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/lbaw17GG_a3.md#ui07-user-profile)  | Success |
 | __Permissions__ | OWN |
 
 ### 3.3 Module 3: Projects
@@ -234,7 +234,7 @@
 | __Description__ | Shows the projects's page.|
 | __Method__ | GET|
 | __Parameters__ | +id: integer | project primary key |
-| __UI__ | [UI08](https://www.google.com)|
+| __UI__ | [UI08](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/lbaw17GG_a3.md#ui08-projects)|
 | __Permissions__ | USR |
    
 #### R302: Add New Project Form
@@ -244,8 +244,8 @@
 | __URL__ | `/projects/add` |
 | __Description__ | Page with a form to create a new project.|
 | __Method__ | GET|
-| __UI__ | [UI09](https://www.google.com)|
-| __SUBMIT__ | [R303](https://www.google.com)|
+| __UI__ | [UI09](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/lbaw17GG_a3.md#ui09-create-a-project)|
+| __SUBMIT__ | [R303](https://github.com/JCLemos92/lbaw1767/blob/master/Report7/A7.md#r303-add-new-project-action)|
 | __Permissions__ | USR |
   
 #### R303: Add New Project Action
@@ -259,9 +259,9 @@
 |  | +description: text | Description of the Project |
 |  | +privacy: bool  | Privacy type of the project |
 |  | +maxMembers: integer | Max number of members in the project |
-| __Redirects__ | [R203](https://www.google.com)  | Success |
-|  | [R204](https://www.google.com) | Error |
-| __Response body__ | JSON303 |  
+| __Redirects__ | [R203](https://github.com/JCLemos92/lbaw1767/blob/master/Report7/A7.md#r203-password-recovery-form)  | Success |
+|  | [R204](https://github.com/JCLemos92/lbaw1767/blob/master/Report7/A7.md#r204-password-recovery-action) | Error |
+| __Response body__ | [JSON303](https://github.com/JCLemos92/lbaw1767/blob/master/Report7/A7.md#41-json303-projects-projects) |  
 | __Permissions__ | USR, OWN |  
   
  #### R304: Project View Page
@@ -272,7 +272,7 @@
 | __Description__ | Shows the projects's page.|
 | __Method__ | GET|
 | __Parameters__ | +id: integer | project primary key |
-| __UI__ | [UI10](https://www.google.com)|
+| __UI__ | [UI10](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/lbaw17GG_a3.md#ui10-project-view)|
 | __Permissions__ | USR |  
   
 #### R305: Search Project
@@ -322,8 +322,8 @@
 | __Description__ | Get all tasks of a project.|
 | __Method__ | GET|
 | __Parameters__ | +id: integer | Project primary key |
-| __UI__ | [UI11](https://www.google.com)|
-| __Response body__ | JSON401 | 
+| __UI__ | [UI11](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/lbaw17GG_a3.md#ui11-task-list)|
+| __Response body__ | [JSON401](https://github.com/JCLemos92/lbaw1767/blob/master/Report7/A7.md#42-json401-projects-tasks) | 
 | __Permissions__ | USR |
 
 #### R402: Add Tasks
@@ -337,8 +337,8 @@
 | __Request Body__ | +title: string   | Task title |
 |  | +description: string | Task description text. |
 |  | +privacy: bool  | Privacy type of the task |
-| __Redirects__ | [R401](https://www.google.com)  | Success |
-|  | [R402](https://www.google.com) | Error |
+| __Redirects__ | [R401](https://github.com/JCLemos92/lbaw1767/blob/master/Report7/A7.md#r401-view-task-list)  | Success |
+|  | [R402](https://github.com/JCLemos92/lbaw1767/blob/master/Report7/A7.md#r402-add-tasks) | Error |
 | __Permissions__ | USR |
 
 #### R403: Edit Tasks
@@ -351,8 +351,8 @@
 | __Parameters__ | +id: integer | Task primary key |
 | __Request Body__ | +description: string   | Task description |
 |  | +privacy: bool  | Privacy type of the task |
-| __Redirects__ | [R401](https://www.google.com)  | Success |
-|  | [R403](https://www.google.com) | Error |
+| __Redirects__ | [R401](https://github.com/JCLemos92/lbaw1767/blob/master/Report7/A7.md#r401-view-task-list)  | Success |
+|  | [R403](https://github.com/JCLemos92/lbaw1767/blob/master/Report7/A7.md#r403-edit-tasks) | Error |
 | __Permissions__ | OWN |
 
 #### R404: Delete Tasks
@@ -363,7 +363,7 @@
 | __Description__ | This web resource deletes a task. |
 | __Method__ | DELETE |
 | __Parameters__ | +id: integer | Task primary key |
-| __Redirects__ | [R401](https://www.google.com)  | Success |
+| __Redirects__ | [R401](https://github.com/JCLemos92/lbaw1767/blob/master/Report7/A7.md#r401-view-task-list)  | Success |
 | __Permissions__ | OWN |
 
 ### 3.5 Module 5: Forum
@@ -384,7 +384,7 @@
 | __Description__ | Show the forum page of a project.|
 | __Method__ | GET|
 | __Parameters__ | +id: integer | Project primary key |
-| __UI__ | [UI13](https://www.google.com)|
+| __UI__ | [UI13](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/lbaw17GG_a3.md#ui13-project-forum)|
 | __Permissions__ | USR |
 
  #### R502: View New Forum Post
@@ -395,7 +395,7 @@
 | __Description__ | Show the forms to create a new post on the Forum Page.|
 | __Method__ | GET|
 | __Parameters__ | +id: integer | Project primary key |
-| __UI__ | [UI14](https://www.google.com)|
+| __UI__ | [UI14](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/lbaw17GG_a3.md#ui14-create-a-forum-post)|
 | __Permissions__ | USR |
 
 #### R503: Add New Forum Post
@@ -421,7 +421,7 @@
 | __Method__ | GET|
 | __Parameters__ | +id_project: integer | project id |
 | | +id_project: integer | Forum post id |
-| __UI__ | [UI15](https://www.google.com)|
+| __UI__ | [UI15](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/lbaw17GG_a3.md#ui15-view-forum-post)|
 | __Permissions__ | USR |
 
 #### R505: Add Forum Post message
@@ -437,7 +437,7 @@
 | __Request Body__ | +comment: text   | Message of user. |
 | __Returns__ | 200 OK  | The message was successfully added. |
 |  | 400 Bad Request | Error. Error message is specified via a HTTP header. |
-| __UI__ | [UI16](https://www.google.com)|
+| __UI__ | [UI16](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/lbaw17GG_a3.md#ui16-create-a-new-message-on-forum-post)|
 | __Permissions__ | USR |
 
 #### 506: Delete Forum Post message
@@ -470,7 +470,7 @@
 | __URL__ | `/index` |
 | __Description__ | Get index page.|
 | __Method__ | GET |
-| __UI__ | [UI01](https://www.google.com)
+| __UI__ | [UI01](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/lbaw17GG_a3.md#ui01-home)
 | __Permissions__ | PUB |
 
 #### R602: About
@@ -480,7 +480,7 @@
 | __URL__ | `/about` |
 | __Description__ | Get about page.|
 | __Method__ | GET |
-| __UI__ | [UI02](https://www.google.com)
+| __UI__ | [UI02](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/lbaw17GG_a3.md#ui02-about)
 | __Permissions__ | PUB |
 
 #### R603: Contact
@@ -490,7 +490,7 @@
 | __URL__ | `/contact` |
 | __Description__ | Get contact page.|
 | __Method__ | GET |
-| __UI__ | [UI04](https://www.google.com)
+| __UI__ | [UI04](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/lbaw17GG_a3.md#ui04-contact)
 | __Permissions__ | PUB |
 
 #### R604: FAQ
@@ -500,7 +500,7 @@
 | __URL__ | `/faq` |
 | __Description__ | Get faq page.|
 | __Method__ | GET |
-| __UI__ | [UI03](https://www.google.com)
+| __UI__ | [UI03](https://github.com/JCLemos92/lbaw1767/blob/master/Report3/lbaw17GG_a3.md#ui03-faq)
 | __Permissions__ | PUB |
 
 ## 4. JSON/XML Types
