--- a/Report2/A2.md
+++ b/Report2/A2.md
@@ -57,6 +57,7 @@ US21|Sign-Out|High|As an Authenticated User, I want to exit from the system, so 
 US22|Join a project|High|As an Authenticated User, I want to join a project, so that I can access privileged information
 US23|Edit profile|Medium|As an Authenticated User, I want to edit my profile, so that I can keep my profile updated
 US24|Respond to project invites|Low|As an Authenticated User, I want to accept/refuse invites to join a project 
+US25|Create a New Project |High|As an Authenticated User, I want to create my own project
 
 Table 4: Authenticated User's user stories 
 
