--- a/Report10/A10.md
+++ b/Report10/A10.md
@@ -4,13 +4,13 @@
  
 ## 1. Installation
  
-> Link to the Github release with the final version of the code.
+> Github release: https://github.com/GabrielFMachado/group1767.github.io
 > Full Docker command to test the group's Docker Hub image using the DBM database.
  
  
 ## 2. Usage
  
-> URL to the product: http://lbaw17GG.lbaw-prod.fe.up.pt
+> URL to the product: http://lbaw1767.lbaw-prod.fe.up.pt
  
 ### 2.1. Administration Credentials
  
