--- a/Report10/A10.md
+++ b/Report10/A10.md
@@ -4,13 +4,20 @@
  
 ## 1. Installation
  
-> Github release: https://github.com/GabrielFMachado/group1767.github.io
-> Full Docker command to test the group's Docker Hub image using the DBM database.
- 
+> Github release
+
+> https://github.com/GabrielFMachado/group1767.github.io
+
+> Full Docker command
+
+> docker run -it -p 8000:80 -e DB_DATABASE=lbaw1767 -e DB_USERNAME=lbaw1767 -e DB_PASSWORD=yt38tq01 gabrielmac/lbaw1767
+
  
 ## 2. Usage
  
-> URL to the product: http://lbaw1767.lbaw-prod.fe.up.pt
+> URL to the product
+
+> http://lbaw1767.lbaw-prod.fe.up.pt
  
 ### 2.1. Administration Credentials
  
