--- a/Report11/11.md
+++ b/Report11/11.md
@@ -4,7 +4,7 @@
  
 ## 1. Product presentation
  
-> Brief presentation of the product and its main features (2 paragraphs max).
+> This project intended to develop an management, objective setting and task scheduling in scope of project development.The system can be used by authenticated users or visitors. Both of them have access to public information, public projects names and descriptions, but only registered users can create or join projects. We made it to simplify project groups routine, organizing projects and your respective tasks. 
  
 > URL to the product: http://lbaw1767.lbaw-prod.fe.up.pt
  
